main.tf
data "aws_availability_zones" "available" {
  state = "available"
}

locals {
  azs = slice(data.aws_availability_zones.available.names, 0, var.az_count)

  public_subnet_cidrs = [
    for i in range(var.az_count) : cidrsubnet(var.vpc_cidr, 8, i)
  ]
}

#region VPC -------------------------------------------------------------------------------------------

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "~> 6.0"

  name = "${var.project_name}-${var.environment}-vpc"
  cidr = var.vpc_cidr

  azs            = local.azs
  public_subnets = local.public_subnet_cidrs

  enable_nat_gateway = false
  enable_vpn_gateway = false
  create_igw         = true

  map_public_ip_on_launch = true
}

#endregion

#region COGNITO -------------------------------------------------------------------------------------------

resource "random_id" "cognito_domain" {
  byte_length = 4
}

module "cognito" {
  source = "./modules/cognito"

  user_pool_name  = "${var.project_name}-${var.environment}-users"
  app_client_name = "${var.project_name}-${var.environment}-management-web"
  domain_prefix   = "${var.project_name}-${var.environment}-${random_id.cognito_domain.hex}"

  callback_urls = var.cognito_callback_urls
  logout_urls   = var.cognito_logout_urls

  dummy_user_email  = var.cognito_dummy_user_email
  dummy_admin_email = var.cognito_dummy_admin_email
  dummy_password    = var.cognito_dummy_password
}

#endregion

#region S3 -------------------------------------------------------------------------------------------

module "s3_landing_zone" {
  source = "terraform-aws-modules/s3-bucket/aws"

  bucket = "${var.project_name}-${var.environment}-landing-zone"

  force_destroy     = true
  block_public_acls = false
}

module "s3_public" {
  source = "terraform-aws-modules/s3-bucket/aws"

  bucket = "${var.project_name}-${var.environment}-public"

  force_destroy = true

  block_public_acls       = false
  block_public_policy     = false
  ignore_public_acls      = false
  restrict_public_buckets = false

  attach_policy = true
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid       = "PublicReadGetObject"
        Effect    = "Allow"
        Principal = "*"
        Action    = "s3:GetObject"
        Resource  = "arn:aws:s3:::${var.project_name}-${var.environment}-public/*"
      }
    ]
  })
}

#endregion -------------------------------------------------------------------------------------------

#region DATABASE -------------------------------------------------------------------------------------------

module "database" {
  source = "./modules/database"

  security_group_ids = [aws_security_group.ec2_security_group.id]
  subnet_id          = module.vpc.public_subnets[0]
  environment        = var.environment
}

resource "aws_security_group" "ec2_security_group" {
  name   = "database-ec2-sg"
  vpc_id = module.vpc.vpc_id
}

resource "aws_vpc_security_group_ingress_rule" "ec2_security_group_ingress_ssh" {
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.ec2_security_group.id
  from_port         = 22
  to_port           = 22
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "ec2_security_group_ingress_postgres" {
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.ec2_security_group.id
  from_port         = 5432
  to_port           = 5432
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_egress_rule" "ec2_security_group_egress" {
  ip_protocol       = "-1"
  security_group_id = aws_security_group.ec2_security_group.id
  from_port         = 0
  to_port           = 0
  cidr_ipv4         = "0.0.0.0/0"
}

#endregion

#region EventBridge Scheduler -------------------------------------------------------------------------------------------



#endregion
